crates/toml_edit/tests/snapshots/invalid/ext/string/no-close-recovery-01.stderr
TOML parse error at line 1, column 6
  |
1 | a = "
  |      ^
invalid basic string
